@@ -59,6 +59,10 @@ nl='
 dnl Check that mkdir -p works
 APR_MKDIR_P_CHECK($top_srcdir/build/mkdir.sh)
 
+dnl get an EGREP to use in the Makefiles
+AC_PROG_EGREP
+APACHE_SUBST(EGREP)
+
 dnl ## Run configure for packages Apache uses
 
 dnl shared library support for these packages doesn't currently
