@@ -16,6 +16,11 @@ Changes with Apache 2.3.15
      core: Fix integer overflow in ap_pregsub. This can be triggered e.g.
      with mod_setenvif via a malicious .htaccess. [Stefan Fritsch]
 
+  *) configure: By default, only load those modules that are either required
+     or explicitly selected by a configure --enable-foo argument. The
+     LoadModule statements for modules enabled by --enable-mods-shared=most
+     and friends will be commented out. [Stefan Fritsch]
+
   *) mod_lua: Prevent early Lua hooks (LuaHookTranslateName and 
      LuaHookQuickHandler) from being configured in <Directory>, <Files>, 
      and htaccess where the configuration would have been ignored.
